[gd_scene load_steps=6 format=3 uid="uid://main_menu_scene"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_menu"]
[ext_resource type="Theme" path="res://ui/theme/fantasy_theme.tres" id="2_theme"]
[ext_resource type="Shader" path="res://assets/shaders/shader_menu_bg.gdshader" id="3_bg_shader"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bg"]
shader = ExtResource("3_bg_shader")
shader_parameter/bg_dark = Color(0.04, 0.02, 0.08, 1)
shader_parameter/bg_mid = Color(0.08, 0.04, 0.16, 1)
shader_parameter/star_color = Color(0.7, 0.6, 0.9, 1)
shader_parameter/energy_color = Color(0.4, 0.2, 0.7, 1)
shader_parameter/star_density = 0.04
shader_parameter/energy_speed = 0.3

[sub_resource type="StyleBoxFlat" id="menu_panel_bg"]
bg_color = Color(0.05, 0.03, 0.1, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.35, 0.65, 0.6)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 40.0
content_margin_top = 30.0
content_margin_right = 40.0
content_margin_bottom = 30.0

[sub_resource type="StyleBoxFlat" id="ornament_line"]
bg_color = Color(0.5, 0.35, 0.65, 0.4)
content_margin_top = 1.0
content_margin_bottom = 1.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
material = SubResource("ShaderMaterial_bg")
color = Color(1, 1, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -220.0
offset_right = 200.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="TitleContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TitleLabel" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.65, 1, 1)
theme_override_font_sizes/font_size = 52
text = "DRAGON LEAGUE"
horizontal_alignment = 1

[node name="OrnamentLine" type="Panel" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 2)
theme_override_styles/panel = SubResource("ornament_line")

[node name="SubtitleLabel" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.55, 0.7, 0.8)
theme_override_font_sizes/font_size = 16
text = "Bind Their Souls. Forge Your Legend."
horizontal_alignment = 1

[node name="MenuPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("menu_panel_bg")

[node name="MenuButtons" type="VBoxContainer" parent="VBoxContainer/MenuPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="NewGameBtn" type="Button" parent="VBoxContainer/MenuPanel/MenuButtons"]
layout_mode = 2
custom_minimum_size = Vector2(280, 44)
text = "New Game"

[node name="ContinueBtn" type="Button" parent="VBoxContainer/MenuPanel/MenuButtons"]
layout_mode = 2
custom_minimum_size = Vector2(280, 44)
text = "Continue"

[node name="BestiaryBtn" type="Button" parent="VBoxContainer/MenuPanel/MenuButtons"]
layout_mode = 2
custom_minimum_size = Vector2(280, 44)
text = "Bestiary"

[node name="ExitBtn" type="Button" parent="VBoxContainer/MenuPanel/MenuButtons"]
layout_mode = 2
custom_minimum_size = Vector2(280, 44)
text = "Exit"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -30.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.4, 0.35, 0.5, 0.5)
theme_override_font_sizes/font_size = 12
text = "Dragon League v0.1 - Prototype"
horizontal_alignment = 2
